--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ test:
   image: python
   script:
     - pip install -U selenium
-    - apt -yq install firefox
-    - apt -yq install Xvfb
+    - apt-get -yq install firefox
+    - apt-get -yq install Xvfb
     - initial_dir=`pwd`
     - cd /usr/bin
     - wget https://github.com/mozilla/geckodriver/releases/download/v0.20.1/geckodriver-v0.20.1-linux64.tar.gz
