--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test:
     - wget https://github.com/mozilla/geckodriver/releases/download/v0.20.1/geckodriver-v0.20.1-linux64.tar.gz
     - tar -xvzf geckodriver*
     - chmod +x geckodriver
-    - cd $initail_dir
+    - cd $initial_dir
     - Xvfb :1 &
     - pid_to_kill=$!
     - export DISPLAY=:1
