--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "3.5"
   - "3.6"
+ 
 
-sudo: no
+sudo: required 
+dist: precise
 install:
   - pip install -r requirements.txt
 
